--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "jest-demo",
+  "name": "prt",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^24.9.0"
   }
 }
